# topdown-shooter-bevy-client

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  release.sh  webpack.config.js
release/assets/data/: map.json
src/: components.rs  hathora.rs  lib.rs  main.rs  serialization.rs  systems.rs
