[package]
name = "topdown-shooter-bevy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
tungstenite = { version = "0.17.3", features = ["native-tls"] }
clipboard = "0.5.0"
clap = { version = "4.0.17", features = ["derive"] }
hathora-client-sdk = "0.1.0"
